@@ -1,3 +1,7 @@
+2008-01-14  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gnome-settings-multimedia-keys.c: reverted patch from bug #165343.
+
 2008-01-05  Denis Washington  <denisw@svn.gnome.org>
 
 	* gnome-settings-accessibility-keyboard.c: Don't depend on
